<resources>
    <string name="app_name">MMS</string>
    <string name="pass">Password</string>
    <string name="name">UserId</string>
    <string name="email">E-Mail</string>
    <string name="phone">Call</string>
    <string name="logn">Login</string>
    <string name="mms">Welcome to MMS</string>
    <string name="len">Length in m</string>
    <string name="sub">Submit</string>
    <string name="ints">Installation No:</string>
    <string name="wifi">WiFi:</string>
    <string name="cable">Cable:</string>
    <string name="yes">Yes</string>
    <string name="ins">Instrument</string>
    <string name="no">No</string>
    <string name="srno">SR No:</string>
    <string name="esr">Enter Serial No</string>
    <string name="duct">Ducts:</string>
    <string name="cons">Consumables:</string>
    <string name="mts">in mts</string>
    <string name="read">Reading:</string>
    <string name="but">Button:</string>
    <string name="num">Number</string>
    <string name="tsf">TSF Kit</string>
    <string name="fed">YOU HAVE SUCCESSFULLY COMPLETED YOUR ASSIGNED WORK.IF ANY FEEDBACK,PLEASE ENTER HERE:</string>
    <string name="feed">FEEDBACK.....</string>
    <string name="next">Next</string>
    <string name="cnu">Create New User</string>
    <string name="assi">Assign User Materials</string>
    <string name="disp">Display User Materials</string>
    <string name="wa">WELCOME ADMIN</string>
    <string name="cu">CREATE USER</string>
    <string name="acnu">ADMIN , Create New User</string>
    <string name="ws">WorkerSite:</string>
    <string name="rem">Remarks</string>
    <string name="asi">ASSIGNING STOCKS</string>
    <string name="wel">Welcome to MMS</string>
    <string name="usi">Enter UserID</string>
    <string name="asis">Assign</string>
    <string name="pro">PROJECT AREA</string>
    <string name="fra">FAULT REPAIR AREA</string>
    <string name="tim">Time</string>
    <string name="p5">5 Pair(in mts)</string>
    <string name="p10">10 Pair(in mts)</string>
    <string name="p20">20 Pair(in mts)</string>
    <string name="p50">50 Pair(in mts)</string>
    <string name="p100">100 Pair(in mts)</string>
    <string name="p200">200 Pair(in mts)</string>
    <string name="p400">400 Pair(in mts</string>
    <string name="p800">800 Pair(in mts</string>
    <string name="dp1">DP 100 pr(unit)</string>
    <string name="dp05">DP 50 pr(unit)</string>
    <string name="gc">GAS CYLINDER(unit)</string>
    <string name="rm">Rigide Module(unit</string>
    <string name="tu">Tape(unit)</string>
    <string name="uy">UY Connector(unit)</string>
    <string name="fci">Fibre Cable(INDOOR) mts</string>
    <string name="fco">Fibre Cable(OUTDOOR) mts</string>
    <string name="oh">ONT-Huwai</string>
    <string name="oh3">ONT-Huwai 300 Mbps</string>
    <string name="on">ONT-Nokia</string>
    <string name="r3">ROUTER-300 Mbps</string>
    <string name="rd">ROUTER-Dlink</string>
    <string name="tl1">Toto Link-100 Mbps</string>
    <string name="cb">Connector-Blue(units)</string>
    <string name="cg">Connector-Green(units)</string>
    <string name="iu">Instrument(units)</string>
    <string name="pc">Patch Card(units)</string>
    <string name="zd">Zero DP(units)</string>
    <string name="ino">Installation number</string>
    <string name="dw">dropWire(mts):</string>
    <string name="lum">Length used(mts)</string>
    <string name="te">Tenda</string>
    <string name="vsdl">VSDL CPE</string>
    <string name="rb1">ROSETT BOX(1 WAY)</string>
    <string name="rb2">ROSETT BOX(2 WAY)</string>
    <string name="wn">Worksite number</string>
    <string name="bm">Blue(in mts)</string>
    <string name="gm">Green(in mts)</string>
    <string name="om">Orange(in mts)</string>
    <string name="dwc">DWC Duct(in mts)</string>
    <string name="ofc">OFC:</string>
    <string name="a24">ARM 24 FWD(in mts)</string>
    <string name="a48">ARM 48 FWD(in mts)</string>
    <string name="a96">ARM 96 FWD(in mts)</string>
    <string name="ua24">UNARM 24 FWD(in mts)</string>
    <string name="ua48">UNARM 48 FWD(in mts)</string>
    <string name="ua96">UNARM 96 FWD(in mts)</string>
    <string name="adss">ADSS CABLE(in mts)</string>
    <string name="ebm">Electronic ball marker(unit)</string>
    <string name="epu">EndPlug(unit)</string>
    <string name="fat16">FAT BOX-16F(unit)</string>
    <string name="fat32">FAT BOX-32F(unit)</string>
    <string name="fms">FMS SET(unit)</string>
    <string name="fosc24">FOSC-BJC-24 FIBER(unit)</string>
    <string name="fosc48">FOSC-BJC-48 FIBER(unit</string>
    <string name="fosc96">FOSC-BJC-96 FIBER(unit)</string>
    <string name="odf144">ODF-144 Wall Mount(unit)</string>
    <string name="odf144f">ODF(144F)Cabinet(O/I)(unit)</string>
    <string name="odf96">ODF(96F)Cabinet(O/I)(unit)</string>
    <string name="odfr">ODF Rack(unit)</string>
    <string name="pbu">Pole Base(unit)</string>
    <string name="pu">POLES(unit)</string>
    <string name="s16">SPLITTERS 1:16(unit)</string>
    <string name="s18">SPLITTERS 1:8(unit)</string>
    <string name="wm24">Wall Mount 24F with SC-PC Adapters and pigtails(unit)</string>
    <string name="wm48">Wall Mount 48F with SC-PC Adapters and pigtails(unit)</string>
    <string name="co">Coupler(unit)</string>
    <string name="cofn">COF No:</string>
    <string name="cofno">COF number</string>
    <string name="pic">Photo</string>
    <string name="nins">No Internet Access</string>
    <string name="chec">Check</string>
    <string name="assig">Assigned</string>
    <string name="avi">Available</string>
    <string name="reset">Reset Password</string>
    <string name="ecp">Enter Current Password</string>
    <string name="enp">Enter New Password</string>
    <string name="renp">Re-Enter New Password</string>
    <string name="cp">CHANGE PASSWORD</string>
    <string name="to">Display Total Stocks</string>
    <string name="fib">Fibre</string>
    <string name="cop">Copper</string>
    <string name="proj">Project</string>
    <string name="ug">UGCM</string>
    <string name="uplo">Upload</string>
    <string name="con">Consumed</string>
    <string name="tra">Transfer Stocks</string>
    <string name="ret">Return Stocks</string>
    <string name="its">Input total Stocks</string>
    <string name="euid1">Enter UserID 1</string>
    <string name="euid2">Enter  UserID 2 </string>



</resources>
