<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.doreswamyhs.mms.NewUserAdmin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/acnu"
        android:id="@+id/textView11"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp" />

    <EditText
        android:id="@+id/useridadm"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView11"
        android:layout_marginEnd="31dp"
        android:inputType="text"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="31dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="46dp"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/userpwdadm"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/useridadm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/useridadm"
        android:layout_centerVertical="true"
        android:inputType="text"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:hint="@string/pass" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cu"
        android:id="@+id/button9"
        android:layout_below="@+id/userpwdadm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"
        android:onClick="createuser"/>

</RelativeLayout>